fix/NNO-10528 fixed TextEditor text alignment

--- a/frontend/n2o-components/src/styles/controls/TextEditor.scss
+++ b/frontend/n2o-components/src/styles/controls/TextEditor.scss
@@ -12,7 +12,12 @@
     }
 
     .n2o-text-editor {
-        padding: 0 10px;
+        padding: 15px 10px;
+
+        // Баг react-draft-wysiwyg, ломает межстрочный интервал при выравнивании
+        .public-DraftStyleDefault-block {
+            margin: 0;
+        }
     }
 
     .rdw-dropdown-optionwrapper {
